# FlexUEFIToolsExample

./: CMakeLists.txt  FlexUEFIToolkit.c  FlexUEFIToolkitDxe.h  FlexUEFIToolkitK.c  FlexUEFIToolkit_lrc.c  LICENSE  Makefile  README.md  Toolkit.h  change_boot_order.c  read_flash.c  test  wyk.c  zdy.c
